objects/ccpe_r__Line_Item_Criteria__c.object
<CustomObject>
    <description>This object is used for storing the skill based spend</description>
    <fields>
        <fullName>ccpe_r__Agreed_Hours__c</fullName>
        <description>The hours the client has agreed to for the period in question</description>
        <label>Agreed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Agreed_Spend__c</fullName>
        <description>The spend the client has agreed to for the period in question</description>
        <label>Agreed Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Global_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the global check box is checked, then no work type can be selected against this line item or any other line item on the master retainer</description>
        <label>Non-Skill Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Retainer__c</fullName>
        <description>This object is used for storing the skill based spend</description>
        <label>Retainer</label>
        <referenceTo>ccpe_r__Retainer__c</referenceTo>
        <relationshipLabel>Line Item Criteria</relationshipLabel>
        <relationshipName>Line_Item_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The skill that the line item is related to</description>
        <label>Work Type</label>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Line Item Criteria</relationshipLabel>
        <relationshipName>Line_Item_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Line Item Criteria</label>
    <nameField>
        <displayFormat>RC{00000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Item Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ccpe_r__Global_Line_Item_cannot_have_Work_Type</fullName>
        <active>true</active>
        <errorConditionFormula>(ccpe_r__Global_Line_Item__c &amp;&amp; NOT(ISBLANK( ccpe_r__Work_Type__c ))) ||  (ccpe_r__Retainer__r.ccpe_r__Type__c == &apos;Global&apos; &amp;&amp; NOT(ISBLANK( ccpe_r__Work_Type__c )))</errorConditionFormula>
        <errorMessage>Global Line Items cannot have a Work Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ccpe_r__Only_1_Global_Line_Item_Allowed</fullName>
        <active>true</active>
        <description>Only a single Line Item Criteria may exist for a retainer marked Global</description>
        <errorConditionFormula>IF(ISNEW(),
ccpe_r__Retainer__r.ccpe_r__Type__c == &apos;Global&apos;, false)</errorConditionFormula>
        <errorMessage>A Line Item cannot be added if the specified Retainer has a Global Line Item</errorMessage>
    </validationRules>
</CustomObject>